Iedited the index

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <div class="container">
-		PUT STUFF HERE
+		TESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTING
     </div>
   </body>
 </html>
